# soloweb

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_GUIDE.md  async_flask.py  async_web.py  example_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  soloweb.py  soloweb_guide.py  template_example.py  test_framework.py  upload_release.sh  upload_to_github.py
soloweb/: __init__.py
soloweb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_soloweb.py  test_templates.py
